[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/mountain3.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/images/start_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/images/start_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/images/bomb_large.png" type="Texture" id=5]
[ext_resource path="res://assets/images/bombs/label_bg.png" type="Texture" id=6]
[ext_resource path="res://assets/images/start_button.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/player_enter.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/game_start_long.wav" type="AudioStream" id=9]

[node name="MainMenu" type="TextureRect"]
pause_mode = 2
margin_right = 1020.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -74.5
margin_top = -104.0
margin_right = 74.5
margin_bottom = -30.0

[node name="StartButton" type="TextureButton" parent="MarginContainer"]
margin_right = 149.0
margin_bottom = 74.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -155.0
margin_top = 30.0
margin_right = 155.0
margin_bottom = 412.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer2"]
margin_right = 310.0
margin_bottom = 382.0
texture = ExtResource( 5 )

[node name="Player1" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -580.0
margin_right = 140.0
margin_bottom = -550.0
custom_constants/margin_right = 10
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Player1"]
self_modulate = Color( 1, 1, 1, 0.654902 )
margin_right = 120.0
margin_bottom = 30.0
texture = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="Player1/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
alignment = 1

[node name="Label" type="Label" parent="Player1/NinePatchRect/HBoxContainer"]
margin_left = 2.0
margin_right = 53.0
margin_bottom = 30.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Player 1"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="Player1/NinePatchRect/HBoxContainer"]
margin_left = 58.0
margin_right = 118.0
margin_bottom = 30.0
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 4

[node name="Player2" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 895.0
margin_top = -580.0
margin_right = 1025.0
margin_bottom = -550.0
custom_constants/margin_right = 10
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Player2"]
self_modulate = Color( 1, 1, 1, 0.654902 )
margin_right = 120.0
margin_bottom = 30.0
texture = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="Player2/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
alignment = 1

[node name="Label" type="Label" parent="Player2/NinePatchRect/HBoxContainer"]
margin_left = 2.0
margin_right = 53.0
margin_bottom = 30.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Player 2"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="Player2/NinePatchRect/HBoxContainer"]
margin_left = 58.0
margin_right = 118.0
margin_bottom = 30.0
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 4

[node name="Player3" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -60.0
margin_right = 140.0
margin_bottom = -30.0
custom_constants/margin_right = 10
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Player3"]
self_modulate = Color( 1, 1, 1, 0.654902 )
margin_right = 120.0
margin_bottom = 30.0
texture = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="Player3/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
alignment = 1

[node name="Label" type="Label" parent="Player3/NinePatchRect/HBoxContainer"]
margin_left = 2.0
margin_right = 53.0
margin_bottom = 30.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Player 3"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="Player3/NinePatchRect/HBoxContainer"]
margin_left = 58.0
margin_right = 118.0
margin_bottom = 30.0
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 4

[node name="Player4" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 895.0
margin_top = -60.0
margin_right = 1025.0
margin_bottom = -30.0
custom_constants/margin_right = 10
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Player4"]
self_modulate = Color( 1, 1, 1, 0.654902 )
margin_right = 120.0
margin_bottom = 30.0
texture = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="Player4/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
alignment = 1

[node name="Label" type="Label" parent="Player4/NinePatchRect/HBoxContainer"]
margin_left = 2.0
margin_right = 53.0
margin_bottom = 30.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Player 4"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="Player4/NinePatchRect/HBoxContainer"]
margin_left = 58.0
margin_right = 118.0
margin_bottom = 30.0
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 4

[node name="PlayerEnter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="GameStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="pressed" from="MarginContainer/StartButton" to="." method="_on_StartButton_pressed"]
